# ros-windows-build

./: .gitignore  CODEOWNERS  MAINTAINERS.md  README.md
common/: agent-clean.yml  agent-prep.yml  docker-clean.bat  remove-unused-toolchains.bat  rospkg2cgmanifest.py
docker/: azure-pipelines.yml  daemon.json  garbage-collection.ps1  garbage-collection.yml
experimental/: README.md  azure-pipelines.yml  installVcpkg.ps1  requirements.txt  vcpkg.in
experimental/python2/: azure-pipelines.yml
experimental/ros/: azure-pipelines.dashing.release.yml  azure-pipelines.eloquent.release.yml  azure-pipelines.foxy.package.yml  azure-pipelines.foxy.prerelease.yml  azure-pipelines.foxy.release.yml  azure-pipelines.foxy.test.yml  azure-pipelines.melodic.release.yml  azure-pipelines.noetic.release.yml  azure-pipelines.noetic.yml  azure-pipelines.packaging.yml  azure-pipelines.publish.prerelease.yml  azure-pipelines.publish.release.yml  azure-pipelines.publish.yml  azure-pipelines.stub.yml  azure-pipelines.yml  build_foxy.bat  build_melodic.bat  build_noetic.bat  build_ros1.bat  build_ros2.bat  extra.pth  foxy_moveit2.repos  foxy_navigation2.repos  foxy_override.repos  gazebo.rosinstall  generateRepos.ps1  noetic.rosinstall  noetic_override.rosinstall  package.xml  ros2.repos  ros2.rosinstall
experimental/ros/chocolatey/: buildChocolatey.ps1  buildStub.ps1  template.nuspec
experimental/ros/dashing/: dashing-cache.yaml  dashing.repos  dashingRepos.ps1  dashing_override.repos  setup.iss
experimental/ros/eloquent/: eloquent-cache.yaml  eloquent.repos  eloquentRepos.ps1  eloquent_override.repos  repos.ps1  setup.iss
experimental/ros/foxy/: CHANGELOG.md  build.bat  foxy-cache.yaml  foxy.repos  foxyRepos.ps1  foxy_moveit2.repos  foxy_navigation2.repos  foxy_override.repos  foxy_override_prerelease.repos  repos.ps1  setup.iss
experimental/ros/installed_patch/share/suitesparse/: suitesparse-config.cmake
experimental/ros/melodic/: CHANGELOG.md  build.bat  melodic-cache.yaml  melodic.repos  melodic.rosinstall  melodic_override.repos  melodic_override.rosinstall  patch.bat  repos.ps1  setup.iss
experimental/ros/melodic/patch/etc/catkin/profile.d/: 999.graphviz.bat  999.qt_plugin_path.bat  999.vcpkg.bat
experimental/ros/melodic/patch/etc/ros/rosdep/: windows.yaml
experimental/ros/noetic/: CHANGELOG.md  build.bat  noetic-cache.yaml  noetic.repos  noetic.rosinstall  noeticRepos.ps1  noetic_moveit.rosinstall  noetic_override.repos  noetic_override.rosinstall  patch.bat  repos.ps1  setup.iss  vcpkg.ps1
experimental/ros/noetic/pre-patch/etc/catkin/profile.d/: 999.sdformat.bat  999.vcpkg.bat
experimental/ros/noetic/pre-patch/etc/ros/rosdep/: windows.yaml
experimental/ros/noetic_patch/gazebo/gazebo10/: colcon.pkg
experimental/ros/src_patch/message_generation/: colcon.pkg
experimental/ros/src_patch/moveit/moveit_planners/moveit_planners/: colcon.pkg
experimental/setup/: azure-pipelines.yml  (+3 more)
package-build/: build.bat  local.yml  package-build.yml  package-test-upgrade.yml  package-test.yml  template.nuspec
ros/: azure-pipelines.dashing.release.yml  azure-pipelines.eloquent.release.yml  azure-pipelines.foxy.release.yml  azure-pipelines.galactic.release.yml  azure-pipelines.humble-base.release.yml  azure-pipelines.humble.release.yml  azure-pipelines.melodic.release.yml  azure-pipelines.noetic.release.yml  azure-pipelines.packaging.yml  azure-pipelines.publish.release.yml  azure-pipelines.rolling.release.yml  azure-pipelines.signing.yml  azure-pipelines.stub.yml  collectDisclosures.ps1
ros-catkin-build/: azure-pipelines.yml  build.bat  build_test.bat  ros-melodic-desktop.runtests.yml  ros-melodic-desktop_full.runtests.yml  ros-melodic-ros_base.runtests.yml  rosdep_install.bat  setup.bat
ros-colcon-build/: azure-pipelines.yml  build.bat  rosdep_install.bat  setup.bat  test.bat
ros/foxy/src/msft_ros2_env/: CMakeLists.txt  LICENSE
ros/foxy/src/msft_ros2_env/env-hooks/: make_vcpkg.bat  sdf.bat.in  sdf.dsv.in  vcpkg.bat.in  vcpkg.dsv.in
ros/foxy/src/msft_ros_env/: CMakeLists.txt  package.xml
ros/foxy/src/msft_ros_env/env-hooks/: vcpkg.bat.in
ros/noetic/src/msft_ros_env/: CMakeLists.txt  package.xml
ros/noetic/src/msft_ros_env/env-hooks/: sdformat.bat.in  vcpkg.bat.in
ros/rolling/src/msft_ros2_env/: CMakeLists.txt  package.xml
ros/rolling/src/msft_ros2_env/env-hooks/: 999.ros_etc_dir.dsv.in
rosdep/: cgmanifest.json
sfx-installer/: build.yml
test/: azure-pipelines.ar-tu-do.yml  azure-pipelines.yml
(+140 files in other folders)
