<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format2.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>msft_ros_env</name>
  <version>0.0.2</version>
  <description>The package adds additonal environment variables for ROS on Windows.</description>
  <maintainer email="riotsquad@microsoft.com">Azure Edge Robotics</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
